--- a/.env.example
+++ b/.env.example
@@ -27,6 +27,7 @@ DB_PORT=3306
 DB_DATABASE=gendalf_test
 DB_USERNAME=root
 DB_PASSWORD=
+DEBUGBAR_ENABLED=false
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
